Minor changes to get the code to build in 2025